<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dim.spacedim.HomeFragment"
        android:label="@string/appName"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_waitingEmptyRoomFragment"
            app:destination="@id/waitingEmptyRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/waitingEmptyRoomFragment"
        android:name="com.dim.spacedim.WaitingEmptyRoomFragment"
        android:label="@string/emptyWaitingRoom"
        tools:layout="@layout/fragment_waiting_empty_room" >
        <action
            android:id="@+id/action_waitingEmptyRoomFragment_to_waitingFilledRoomFragment"
            app:destination="@id/waitingFilledRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/waitingFilledRoomFragment"
        android:name="com.dim.spacedim.WaitingFilledRoomFragment"
        android:label="@string/filledWaitingRoom"
        tools:layout="@layout/fragment_waiting_filled_room" >
        <action
            android:id="@+id/action_waitingFilledRoomFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.dim.spacedim.GameFragment"
        android:label="@string/Game"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_gameFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.dim.spacedim.WinFragment"
        android:label="@string/Win"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="com.dim.spacedim.LoseFragment"
        android:label="@string/Lose"
        tools:layout="@layout/fragment_lose">
        <action
            android:id="@+id/action_loseFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>