<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home_background"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="center_horizontal"
            android:text="@string/homeTitle"
            android:textColor="@color/white"
            android:textSize="@dimen/homeTitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <EditText
            android:id="@+id/editPlayerNicknameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editPlayerNicknameInput_width"
            android:ems="10"
            android:fontFamily="@font/audiowide"
            android:hint="@string/editPlayerNicknameInput_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/editPlayerNicknameInput_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            app:layout_constraintVertical_bias="0.35"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/homeSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeSubtitle"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/editPlayerNicknameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goButton"
            app:layout_constraintBaseline_toBaselineOf="@+id/editPlayerNicknameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editPlayerNicknameInput" />

        <TextView
            android:id="@+id/registerSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerSubtitle"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPlayerNicknameInput"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.77"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeTitle"
            app:layout_constraintVertical_bias="0.70" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>