<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home_background"
        tools:context=".LoseFragment">

        <TextView
            android:id="@+id/loseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/lose_title"
            android:textColor="@color/white"
            android:textSize="@dimen/gameTitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/loseScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/lose_score"
            android:textColor="@color/white"
            android:textSize="@dimen/gameAnnotation_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loseTitle"
            app:layout_constraintVertical_bias="0.15" />

        <Button
            android:id="@+id/loseRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#870000"
            android:text="@string/lose_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loseScore"
            app:layout_constraintVertical_bias="0.19" />

        <Button
            android:id="@+id/loseHighScores"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03257A"
            android:text="@string/lose_scores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loseRetry"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>