<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home_background"
        tools:context=".WaitingEmptyRoomFragment">

        <TextView
            android:id="@+id/filledWaitingRoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/emptyWaitingRoomTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/waitingRoomTitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <RadioButton
            android:id="@+id/socketIsActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/emptyWaitingRoom_socket"
            android:textColor="@color/white"
            android:textSize="@dimen/editPlayerNicknameInput_size"
            app:layout_constraintBottom_toTopOf="@+id/joinGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledWaitingRoomTitle" />

        <Button
            android:id="@+id/joinGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C30AD1"
            android:fontFamily="@font/audiowide"
            android:text="@string/emptyWaitingRoom_join"
            android:textColor="#FFF8E1"
            app:layout_constraintBottom_toTopOf="@+id/roomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledWaitingRoomTitle"
            app:layout_constraintVertical_bias="0.9"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/emptyWaitingRoom_joined"
            android:textColor="@color/white"
            android:textSize="@dimen/editPlayerNicknameInput_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledWaitingRoomTitle"
            app:layout_constraintVertical_bias="0.43" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>