<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_home_background"
        tools:context=".GameFragment">

        <Button
            android:id="@+id/gameWin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#279809"
            android:fontFamily="@font/audiowide"
            android:text="@string/gameWin"
            android:textSize="@dimen/editPlayerNicknameInput_size"
            app:layout_constraintBottom_toTopOf="@+id/gameAnnotation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/gameLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B61212"
            android:fontFamily="@font/audiowide"
            android:text="@string/gameLose"
            android:textSize="@dimen/editPlayerNicknameInput_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/gameWin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gameAnnotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/gameAnnotation"
            android:textColor="@color/white"
            android:textSize="@dimen/gameAnnotation_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/game_instruction"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/gameTitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameAnnotation"
            app:layout_constraintVertical_bias="0.12" />

        <ProgressBar
            android:id="@+id/gameBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gameBar_margin"
            android:layout_marginEnd="@dimen/gameBar_margin"
            android:max="100"
            android:progress="80"
            android:progressTint="#E61212"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle"
            app:layout_constraintVertical_bias="0.1"
            tools:visibility="visible" />

        <TableLayout
            android:id="@+id/gameOptions"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:stretchColumns="0,1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameBar">

            <TableRow
                android:id="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/firstButton"
                    android:name="com.dim.spacedim.GameButtonFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/firstSwitch"
                    android:name="com.dim.spacedim.GameSwitchFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/secondRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/secondSwitch"
                    android:name="com.dim.spacedim.GameSwitchFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/secondButton"
                    android:name="com.dim.spacedim.GameButtonFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>